配置配置及代码